[package]
name = "walrs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.3.1"
walrs_acl = { path = 'crates/acl' }
walrs_graph = { path = 'crates/graph' }
walrs_inputfilter = { path = "crates/inputfilter" }
walrs_navigation = { path = "crates/navigation" }
walrs_rbac = { path = "crates/rbac" }

[workspace]
members = [
    "crates/acl",
    "crates/digraph",
    "crates/filter",
    "crates/form",
    "crates/graph",
    "crates/inputfilter",
    "crates/navigation",
    "crates/validation",
    "crates/rbac"
]
