[package]
name = "walrs"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "Elastic-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["acl", "digraph", "filter", "graph", "fieldfilter", "navigation", "rbac", "validation"]
full = ["acl", "digraph", "filter", "graph", "fieldfilter", "fieldfilter-derive", "navigation", "rbac", "validation"]

acl = ["dep:walrs_acl"]
digraph = ["dep:walrs_digraph"]
filter = ["dep:walrs_filter"]
graph = ["dep:walrs_graph"]
fieldfilter = ["dep:walrs_fieldfilter"]
fieldfilter-derive = ["fieldfilter", "walrs_fieldfilter/derive"]
navigation = ["dep:walrs_navigation"]
rbac = ["dep:walrs_rbac"]
validation = ["dep:walrs_validation"]

[dependencies]
walrs_acl = { path = "crates/acl", optional = true }
walrs_digraph = { path = "crates/digraph", optional = true }
walrs_filter = { path = "crates/filter", optional = true }
walrs_graph = { path = "crates/graph", optional = true }
walrs_fieldfilter = { path = "crates/fieldfilter", optional = true }
walrs_navigation = { path = "crates/navigation", optional = true }
walrs_rbac = { path = "crates/rbac", optional = true }
walrs_validation = { path = "crates/validation", optional = true }

[workspace]
members = [
    "crates/acl",
    "crates/acl-wasm",
    "crates/digraph",
    "crates/filter",
    "crates/graph",
    "crates/fieldfilter",
    "crates/navigation",
    "crates/validation",
    "crates/rbac",
    "crates/rbac-wasm",
    "crates/fieldset_derive"
]
