[package]
name = "walrs_acl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walrs_graph = { path = '../graph' }
serde = "1.0.228"
serde_json = "1.0.149"
serde_derive = "1.0.228"

[dev-dependencies]
rand = "0.8"
actix-web = "4"

[[example]]
name = "acl_builder_example"
path = "examples/acl_builder_example.rs"

[[example]]
name = "acl_try_from_json"
path = "examples/acl_try_from_json.rs"

[[example]]
name = "benchmark_extensive_acl"
path = "benchmarks/benchmark_extensive_acl.rs"

[[example]]
name = "benchmark_actix_middleware"
path = "benchmarks/benchmark_actix_middleware.rs"
