[package]
name = "walrs_acl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["serde/std", "serde_json/std"]
wasm = []

[dependencies]
walrs_graph = { path = '../graph' }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
serde_derive = "1.0.228"

[dev-dependencies]
rand = "0.8"
actix-web = "4"

[[example]]
name = "acl_builder_example"
path = "examples/acl_builder_example.rs"

[[example]]
name = "acl_try_from_json"
path = "examples/acl_try_from_json.rs"

[[example]]
name = "benchmark_extensive_acl"
path = "benchmarks/benchmark_extensive_acl.rs"

[[example]]
name = "benchmark_actix_middleware"
path = "benchmarks/benchmark_actix_middleware.rs"
