[package]
name = "walrs_filter"
version = "0.1.0"
authors = ["Ely De La Cruz <elycruz@elycruz.com>"]
edition = "2024"
description = "Filter/transformation structs for input filtering"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "Cargo.toml"]

[features]
default = []
fn_traits = []
nightly = ["fn_traits"]

[dependencies]
derive_builder = "0.13.0"
regex = "1.3.1"
ammonia = "3.3.1"

