[package]
name = "walrs_form"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.9.0"
walrs_inputconstraints = { path = "../inputconstraints" }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.82"
