[package]
name = "walrs_inputfilter"
version = "0.1.0"
authors = ["Ely De La Cruz <elycruz@elycruz.com>"]
edition = "2021"
include = ["src/**/*", "Cargo.toml"]

[dependencies]
bytes = "1.4.0"
regex = "1.3.1"
derive_builder = "0.12.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.82"
ammonia = "3.3.0"

[build]
profiler = true
