[package]
name = "walrs_navigation"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
actix-web = "4.0"
actix-rt = "2.0"

[[bench]]
name = "navigation_benchmarks"
harness = false
