[package]
name = "walrs_form"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walrs_inputfilter = { path = "../inputfilter" }
bytes = "1.4.0"
regex = "1.3.1"
derive_builder = "0.12.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.82"
