[package]
name = "walrs_acl_wasm"
version = "0.1.0"
edition = "2024"
license = "Elastic-2.0"
description = "WebAssembly bindings for walrs_acl"
include = ["src/**/*", "Cargo.toml", "README.md"]

[lib]
crate-type = ["cdylib"]

[dependencies]
walrs_acl = { path = "../acl" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
