[package]
name = "walrs_acl"
version = "0.3.0"
edition = "2024"
license = "Elastic-2.0"

[features]
default = ["std"]
std = ["serde/std", "serde_json/std"]
async = ["dep:async-trait"]

[package.metadata.docs.rs]
features = ["async"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
walrs_digraph = { path = '../digraph' }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
serde_derive = "1.0.228"
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
rand = "0.9"
actix-web = "4"
tokio = { version = "1", features = ["rt", "macros"] }

[[example]]
name = "acl_builder_example"
path = "examples/acl_builder_example.rs"

[[example]]
name = "acl_try_from_json"
path = "examples/acl_try_from_json.rs"

[[example]]
name = "benchmark_extensive_acl"
path = "benchmarks/benchmark_extensive_acl.rs"

[[example]]
name = "benchmark_actix_middleware"
path = "benchmarks/benchmark_actix_middleware.rs"
