[package]
name = "walrs_fieldfilter"
version = "0.1.0"
authors = ["Ely De La Cruz <elycruz@elycruz.com>"]
edition = "2024"
license = "Elastic-2.0"
include = ["src/**/*", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
async = ["walrs_validation/async"]
derive = ["walrs_fieldset_derive"]

[dependencies]
derive_builder = "0.13.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.82"
indexmap = { version = "2", features = ["serde"] }
walrs_filter = { path = "../filter", features = ["validation", "value"] }
walrs_validation = { path = "../validation", features = ["value"] }
walrs_fieldset_derive = { path = "../fieldset_derive", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[[example]]
name = "derive_simple"
required-features = ["derive"]

[[example]]
name = "derive_nested"
required-features = ["derive"]

[[example]]
name = "derive_async"
required-features = ["derive", "async"]

[[example]]
name = "derive_cross_validate"
required-features = ["derive"]
