[package]
name = "walrs_filter"
version = "0.2.0"
authors = ["Ely De La Cruz <elycruz@elycruz.com>"]
edition = "2024"
description = "Filter/transformation structs for input filtering"
license = "Elastic-2.0"
repository = "https://github.com/elycruz/walrs"
readme = "README.md"
keywords = ["filter", "sanitize", "transform", "validation", "form"]
categories = ["text-processing", "web-programming"]
include = ["src/**/*", "examples/**/*", "benches/**/*", "README.md", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["validation"]
fn_traits = []
nightly = ["fn_traits"]
validation = ["dep:walrs_validation"]

[dependencies]
ammonia = "3.3.1"
derive_builder = "0.13.0"
percent-encoding = "2"
regex = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
walrs_validation = { path = "../validation", optional = true }

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0"
walrs_validation = { path = "../validation" }

[[bench]]
name = "filter_benchmarks"
harness = false
