[package]
name = "walrs_form"
version = "0.1.0"
edition = "2024"
authors = ["Ely De La Cruz <elycruz@elycruz.com>"]
description = "Form elements and structure for walrs form ecosystem"
license = "Elastic-2.0"

[dependencies]
walrs_fieldfilter = { path = "../fieldfilter" }
walrs_validation = { path = "../validation" }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_builder = "0.13.0"
thiserror = "1.0"
regex = "1.3.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["FormData"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[features]
default = ["std"]
std = []
wasm = []

