[package]
name = "walrs_form_core"
version = "0.1.0"
edition = "2024"
authors = ["Ely De La Cruz <elycruz@elycruz.com>"]
description = "Core types for walrs form ecosystem"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []

