[package]
name = "walrs_graph"
version = "0.1.0"
edition = "2024"
license = "Elastic-2.0"

[dependencies]
walrs_digraph = { path = '../digraph' }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "graph_benchmarks"
harness = false

[[example]]
name = "graph_traversal"
path = "examples/graph_traversal.rs"

[[example]]
name = "symbol_graph_demo"
path = "examples/symbol_graph_demo.rs"
