[package]
name = "walrs_inputfilter"
version = "0.1.0"
authors = ["Ely De La Cruz <elycruz@elycruz.com>"]
edition = "2024"
license = "Elastic-2.0"
include = ["src/**/*", "Cargo.toml"]

[features]
default = []
async = ["walrs_validation/async"]

[dependencies]
derive_builder = "0.13.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.82"
indexmap = { version = "2", features = ["serde"] }
walrs_filter = { path = "../filter", features = ["validation"] }
walrs_validation = { path = "../validation" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
