[package]
name = "walrs_validation"
version = "0.1.0"
authors = ["Ely De La Cruz <elycruz@elycruz.com>"]
edition = "2024"
description = "Composable validation rules for input validation"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "Cargo.toml"]

[features]
default = ["serde_json_bridge"]
serde_json_bridge = ["dep:serde_json"]
indexmap = ["dep:indexmap"]
chrono = ["dep:chrono"]
jiff = ["dep:jiff"]

[dependencies]
chrono = { version = "0.4", optional = true }
indexmap = { version = "2", features = ["serde"], optional = true }
jiff = { version = "0.2", optional = true }
regex = "1.3.1"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = { version = "1.0.82", optional = true }
thiserror = "1.0"
url = "2"
