[package]
name = "walrs_validation"
version = "0.1.0"
authors = ["Ely De La Cruz <elycruz@elycruz.com>"]
edition = "2024"
rust-version = "1.85"
description = "Composable validation rules for input validation"
license = "Elastic-2.0"
repository = "https://github.com/elycruz/walrs"
homepage = "https://github.com/elycruz/walrs"
documentation = "https://docs.rs/walrs_validation"
readme = "README.md"
keywords = ["validation", "forms", "rules", "input", "composable"]
categories = ["web-programming", "data-structures"]
include = ["src/**/*", "Cargo.toml", "README.md", "../../LICENSE", "tests/**/*", "examples/**/*", "benches/**/*"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["value", "serde_json_bridge"]
value = []
serde_json_bridge = ["dep:serde_json", "value"]
async = []
chrono = ["dep:chrono"]
jiff = ["dep:jiff"]

[dependencies]
chrono = { version = "0.4", optional = true }
indexmap = { version = "2", features = ["serde"] }
jiff = { version = "0.2", optional = true }
regex = "1.3.1"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = { version = "1.0.82", optional = true }
thiserror = "1.0"
url = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0.82"
tokio = { version = "1", features = ["rt", "macros"] }

[[bench]]
name = "validation_benchmarks"
harness = false

[[example]]
name = "value_validation"
required-features = ["value"]
